feat:新增delete individual api
